@@ -13,8 +13,6 @@ inc/Module/Install/Makefile.pm
 inc/Module/Install/Metadata.pm
 inc/Module/Install/Win32.pm
 inc/Module/Install/WriteAll.pm
-lib/IO/#ReStoreFH.pm#
-lib/IO/.#ReStoreFH.pm
 lib/IO/ReStoreFH.pm
 Makefile.PL
 MANIFEST			This list of files
